--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>Ăn GoGi trúng 1 tỷ</title>
 
   <base href="/" />
 
@@ -12,7 +12,7 @@
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
 
-  <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
+  <link rel="icon" type="image/png" href="assets/icon/gogi-ico.png" />
   <script src="http://chancejs.com/chance.min.js"></script>
 
   <!-- add to homescreen for ios -->
@@ -22,6 +22,6 @@
 
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.04320d5896d4817ec350.js" type="module"></script><script src="runtime-es5.04320d5896d4817ec350.js" nomodule defer></script><script src="polyfills-es5.3eb2742d1f8cb2ab16ab.js" nomodule defer></script><script src="polyfills-es2015.479c714c8555b532c330.js" type="module"></script><script src="cordova.093c0bee90abca788f07.js" defer></script><script src="main-es2015.de5ddfdf5f2279796fa2.js" type="module"></script><script src="main-es5.de5ddfdf5f2279796fa2.js" nomodule defer></script></body>
+<script src="runtime-es2015.04320d5896d4817ec350.js" type="module"></script><script src="runtime-es5.04320d5896d4817ec350.js" nomodule defer></script><script src="polyfills-es5.3eb2742d1f8cb2ab16ab.js" nomodule defer></script><script src="polyfills-es2015.479c714c8555b532c330.js" type="module"></script><script src="main-es2015.de5ddfdf5f2279796fa2.js" type="module"></script><script src="main-es5.de5ddfdf5f2279796fa2.js" nomodule defer></script></body>
 
 </html>
